--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             queryParams += '&' + encodeURIComponent('dataTerm') + '=' + encodeURIComponent('DAILY');
             queryParams += '&' + encodeURIComponent('ver') + '=' + encodeURIComponent('1.3');
         $.ajaxPrefilter(function(options) {
-            if (options.crossDomain && jQuery.support.cors) {
+            if (options.crossDomain && $.support.cors) {
                 options.url = 'https://cors-anywhere.herokuapp.com/' + options.url;
             }
         });
